--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,49 +1,105 @@
-body {
-  background-color: #00bfc5;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 900'%3E%3Cpath fill='%23A0E2DB' d='M0 504 0 899 1600 899 1600 120z'/%3E%3Cpath fill='%23CBF2F3' d='M1600 567 1600 899 0 899 0 165z'/%3E%3Cpath fill='%23719D71' d='M0 680 0 899 1600 899 1600 300z'/%3E%3Cpath fill='%237EB67E' d='M1600 719 1600 899 0 899 0 353z'/%3E%3Cpath fill='%23004D66' d='M0 788 0 899 1600 899 1600 625z'/%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
+/* Meus estilos */
+
+.ui.input {
+  margin-top: 50px;
 }
 
-#config {
-  position: absolute;
-  margin: 20px;
-  top: 0;
-  right: 0;
-  cursor: pointer;
+.seccao {
+  margin: 80px 0;
 }
 
-#texto {
-  display: inline-block;
-  padding: 5px;
-  background-color: rgba(0,0,0,0.2);
-  text-align: center;
-  color: white;
+.titulo {
+  margin-bottom: 40px !important;
 }
 
-.container {
-  position: fixed;
-  bottom: 100px;
-  left: 50%;
-  transform: translate(-50%,-50%); 
+.configuracoes .ui.button {
+  margin: 10px 0;
 }
 
-.ui.modal .actions >.button {
-  margin-left: 0 !important; 
+/* Semantic */
+
+.hidden.menu {
+  display: none;
 }
 
-.rodape {
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    padding: 10px;
-    background-color: rgba(0,0,0,0.7);
-    color: white;
+.masthead.segment {
+  min-height: 700px;
+  padding: 1em 0em;
+}
+.masthead .logo.item img {
+  margin-right: 1em;
+}
+.masthead .ui.menu .ui.button {
+  margin-left: 0.5em;
+}
+.masthead h1.ui.header {
+  margin-top: 3em;
+  margin-bottom: 0em;
+  font-size: 4em;
+  font-weight: normal;
+}
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
 }
 
-.rodape a {
-  color: white;
-  font-weight: bold;
+.ui.vertical.stripe {
+  padding: 8em 0em;
 }
+.ui.vertical.stripe h3 {
+  font-size: 2em;
+}
+.ui.vertical.stripe .button + h3,
+.ui.vertical.stripe p + h3 {
+  margin-top: 3em;
+}
+.ui.vertical.stripe .floated.image {
+  clear: both;
+}
+.ui.vertical.stripe p {
+  font-size: 1.33em;
+}
+.ui.vertical.stripe .horizontal.divider {
+  margin: 3em 0em;
+}
+
+.quote.stripe.segment {
+  padding: 0em;
+}
+.quote.stripe.segment .grid .column {
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
+
+.footer.segment {
+  padding: 5em 0em;
+}
+
+.secondary.pointing.menu .toc.item {
+  display: none;
+}
+
+@media only screen and (max-width: 700px) {
+  .ui.fixed.menu {
+    display: none !important;
+  }
+  .secondary.pointing.menu .item,
+  .secondary.pointing.menu .menu {
+    display: none;
+  }
+  .secondary.pointing.menu .toc.item {
+    display: block;
+  }
+  .masthead.segment {
+    min-height: 350px;
+  }
+  .masthead h1.ui.header {
+    font-size: 2em;
+    margin-top: 1.5em;
+  }
+  .masthead h2 {
+    margin-top: 0.5em;
+    font-size: 1.5em;
+  }
+}
+
